[package]
name = "tsc2046"
description = "TSC2046 SPI 4-Wire Touch Screen Controller driver"
version = "0.1.0"
edition = "2021"
authors = ["Tamas Feher <tamas@edbuilds.net>"]
keywords = ["spi", "tsc0246", "driver", "embedded", "hal"]
categories = ["hardware-support", "no-std", "embedded"]
repository = "https://github.com/EdBuilds/TSC2046"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0"
bitflags = "2.4.2"
[dev-dependencies]
mockall = "0.12.1"